// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`01 - No default theme. 01 - No options at registration. 01 - No extra themes 1`] = `
<div>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 01 - No extra themes 2`] = `
<div>
  <div>
    Child
  </div>
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 02 - Ad hoc theme 1`] = `
<div
  class="theme-a__container___KKR91"
>
  <div
    class="theme-a__content___yA6Ea"
  >
    Child
  </div>
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 1`] = `
<div>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 2`] = `
<div
  class="theme-b__container___atStN"
>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 3`] = `
<div
  class="theme-b__container___atStN"
>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 1`] = `
<div>
  <div
    class="theme-c__content___tcrzy"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 2`] = `
<div
  class="theme-b__container___atStN"
>
  <div
    class="theme-c__content___tcrzy"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 3`] = `
<div
  class="theme-a__container___KKR91"
>
  <div
    class="theme-a__content___yA6Ea theme-c__ad___pkn9n theme-c__hoc___MQR5Y theme-c__content___tcrzy"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 4`] = `
<div
  class="theme-b__container___atStN"
>
  <div
    class="theme-c__content___tcrzy"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 05 - Context + ad hoc + composition modes 1`] = `
<div
  class="theme-b__container___atStN"
>
  <div
    class="theme-a__content___yA6Ea"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 05 - Context + ad hoc + composition modes 2`] = `
<div
  class="theme-b__container___atStN"
>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 05 - Context + ad hoc + composition modes 3`] = `"Invalid composition mode"`;

exports[`01 - No default theme. 01 - No options at registration. 06 - Nested ThemeProvider does not shadow parent themes it does not override 1`] = `
[
  <div
    class="theme-a__container___KKR91"
  >
    <div
      class="theme-a__content___yA6Ea"
    />
  </div>,
  <div
    class="theme-b__container___atStN"
  >
    <div />
  </div>,
]
`;

exports[`02 - With default theme 01 - No options at registration. 01 - No extra themes 1`] = `
<div
  class="theme-a__container___KKR91"
>
  <div
    class="theme-a__content___yA6Ea"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 01 - No extra themes 2`] = `
<div
  class="theme-a__container___KKR91"
>
  <div
    class="theme-a__content___yA6Ea"
  >
    Child
  </div>
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 02 - Ad hoc theme 1`] = `
<div
  class="theme-a__container___KKR91 theme-b__ad___TwfGm theme-b__hoc___QB2GB theme-b__container___atStN"
>
  <div
    class="theme-a__content___yA6Ea"
  >
    Child
  </div>
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 1`] = `
<div
  class="theme-a__container___KKR91"
>
  <div
    class="theme-a__content___yA6Ea"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 2`] = `
<div
  class="theme-a__container___KKR91 theme-b__context___RaJ9p theme-b__container___atStN"
>
  <div
    class="theme-a__content___yA6Ea"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 3`] = `
<div
  class="theme-b__container___atStN"
>
  <div />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 1`] = `
<div
  class="theme-a__container___KKR91"
>
  <div
    class="theme-a__content___yA6Ea theme-c__ad___pkn9n theme-c__hoc___MQR5Y theme-c__content___tcrzy"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 2`] = `
<div
  class="theme-a__container___KKR91 theme-b__context___RaJ9p theme-b__container___atStN"
>
  <div
    class="theme-a__content___yA6Ea theme-c__ad___pkn9n theme-c__hoc___MQR5Y theme-c__content___tcrzy"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 3`] = `
<div
  class="theme-a__container___KKR91"
>
  <div
    class="theme-a__content___yA6Ea theme-c__context___c9i1d theme-c__content___tcrzy theme-d__ad___CxaN3 theme-d__hoc___Ymq3c theme-d__content___h6mrz"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 05 - Context + ad hoc + composition modes 1`] = `
<div
  class="theme-a__container___KKR91"
>
  <div
    class="theme-c__content___tcrzy theme-a__context___kW3Il theme-a__content___yA6Ea theme-d__ad___CxaN3 theme-d__hoc___Ymq3c theme-d__content___h6mrz"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 05 - Context + ad hoc + composition modes 2`] = `
<div
  class="theme-a__container___KKR91"
>
  <div
    class="theme-a__content___yA6Ea theme-d__ad___CxaN3 theme-d__hoc___Ymq3c theme-d__content___h6mrz"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 05 - Context + ad hoc + composition modes 3`] = `
<div>
  <div
    class="theme-c__content___tcrzy theme-d__ad___CxaN3 theme-d__hoc___Ymq3c theme-d__content___h6mrz"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 01 - composeContextTheme 1`] = `
<div
  class="theme-b__container___atStN"
>
  <div />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 01 - composeContextTheme 2`] = `
<div
  class="theme-b__container___atStN"
>
  <div
    class="theme-a__content___yA6Ea"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 02 - composeAdhocTheme 1`] = `
<div
  class="theme-b__container___atStN"
>
  <div />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 02 - composeAdhocTheme 2`] = `
<div
  class="theme-b__container___atStN"
>
  <div
    class="theme-a__content___yA6Ea"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 03 - themePriority 1`] = `
[
  <div
    class="theme-b__container___atStN theme-a__context___kW3Il theme-a__container___KKR91"
  >
    <div
      class="theme-a__content___yA6Ea theme-c__ad___pkn9n theme-c__hoc___MQR5Y theme-c__content___tcrzy"
    />
  </div>,
  <div
    class="theme-a__container___KKR91 theme-b__context___RaJ9p theme-b__container___atStN"
  >
    <div
      class="theme-a__content___yA6Ea theme-c__ad___pkn9n theme-c__hoc___MQR5Y theme-c__content___tcrzy"
    />
  </div>,
]
`;

exports[`02 - With default theme 02 - Options at registration 05 - Specifity tags 1`] = `
<div
  class="theme-a__container___KKR91  theme-b__container___atStN"
>
  <div
    class="theme-a__content___yA6Ea  theme-c__hoc___MQR5Y theme-c__content___tcrzy"
  />
</div>
`;
